--- a/style.css
+++ b/style.css
@@ -56,4 +56,9 @@ button{
     background-color: aquamarine;
     font-size: 16px;
     cursor: pointer;
+    border-radius: 10px;
+
+}
+button:hover{
+    background-color: lightskyblue;
 }
